--- a/service_product_application.yml
+++ b/service_product_application.yml
@@ -19,7 +19,7 @@ eureka:
       defaultZone: http://localhost:7001/eureka
 mybatis-plus:
   mapper-locations: classpath:cn/itsource/legou/mapper/*Mapper.xml
-  type-aliases-package: cn.itsource.legou.domain
+  type-aliases-package: cn.itsource.legou.domain,cn.itsource.legou.query
 ---
 server:
   port: 8003
@@ -38,4 +38,4 @@ eureka:
       defaultZone: http://localhost:7001/eureka
 mybatis-plus:
   mapper-locations: classpath:cn/itsource/legou/mapper/*Mapper.xml
-  type-aliases-package: cn.itsource.legou.domain
+  type-aliases-package: cn.itsource.legou.domain,cn.itsource.legou.query
