--- a/zuul_application.yml
+++ b/zuul_application.yml
@@ -23,6 +23,8 @@ zuul:
     plat.path: /plat/**
     product.serviceId: product-service
     product.path: /product/**
+    common.serviceId: common-privoder
+    common.path: /common/**
 ---
 server:
   port: 9528
@@ -45,3 +47,5 @@ zuul:
     plat.path: /plat/**
     product.serviceId: product-service
     product.path: /product/**
+    common.serviceId: common-privoder
+    common.path: /common/**
