--- a/service_product_application.yml
+++ b/service_product_application.yml
@@ -17,6 +17,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:7001/eureka
+feign:
+  hystrix:
+    enabled: true
 mybatis-plus:
   mapper-locations: classpath:cn/itsource/legou/mapper/*Mapper.xml
   type-aliases-package: cn.itsource.legou.domain,cn.itsource.legou.query
@@ -36,6 +39,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:7001/eureka
+feign:
+  hystrix:
+    enabled: true
 mybatis-plus:
   mapper-locations: classpath:cn/itsource/legou/mapper/*Mapper.xml
   type-aliases-package: cn.itsource.legou.domain,cn.itsource.legou.query
